--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva Viajes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <img >
+            <a class="navbar-brand" href="#">Viajes</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#inicio">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#destinos">Destinos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ofertas">Ofertas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contacto">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header class="bg-primary text-white text-center py-4">
         <h1>Reserva tu viaje soñado</h1>
-        <p>Encuentra los mejores destinos al mejor precio</p>
+        <p>Encuentra los mejores destinos al mejor precio</p>     
     </header>
 
     <section class="container my-5">
@@ -72,7 +97,7 @@
                     <img src="img/ny.jpeg" class="card-img-top" alt="Ciudad">
                     <div class="card-body">
                         <h5 class="card-title">Nueva York</h5>
-                        <p class="card-text">Desde 499€ USD</p>
+                        <p class="card-text">Desde 499€</p>
                         <a href="#" class="btn btn-primary">Reservar</a>
                     </div>
                 </div>
