--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva Viajes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -11,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <img >
+            <img src="img/logo2.png" alt="Logo" style="height: 40px; margin-right: 10px;">
             <a class="navbar-brand" href="#">Viajes</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,21 +23,55 @@
                         <a class="nav-link active" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#destinos">Destinos</a>
+                        <a class="nav-link" href="destinos.html">Destinos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#ofertas">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="bg-primary text-white text-center py-4">
-        <h1>Reserva tu viaje soñado</h1>
-        <p>Encuentra los mejores destinos al mejor precio</p>     
+    <header>
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/banner1.jpg" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>¡ Reserva tu Viaje Soñado !</h5>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/img/banner.jpg" class="d-block w-100">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Encuentra los mejores destinos al mejor precio</h5>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/banner2.jpg" class="d-block w-100">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Planifica tus próximas aventruas hoy</h5>
+                    <p></p>
+                </div>
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
 
     <section class="container my-5">
@@ -105,10 +140,110 @@
         </div>
     </section>
 
+    <section id="rutas-recomendadas" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Rutas Recomendadas</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="/img/ruta1.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Cangas de Onís y Covadonga, Asturias</h5>
+                            <p class="card-text">Descubre el Norte de España cen un recorrido único</p>
+                            <a href="#" class="btn btn-primary">Saber más</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="/img/ruta2.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Peñalara, Sierra de Guadarrama, Madrid</h5>
+                            <p class="card-text">Descubre el Norte de España cen un recorrido único</p>
+                            <a href="#" class="btn btn-primary">Saber más</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="/img/ruta3.jpg" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Camí de Cavalls, Menorca</h5>
+                            <p class="card-text">Descubre el Norte de España cen un recorrido único</p>
+                            <a href="#" class="btn btn-primary">Saber más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section id="opiniones" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Lo que Dicen Nuestros Clientes</h2>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <blockquote class="blockquote">
+                        <p>"Un viaje increíble, todo estuvo perfectamente organizado."</p>
+                        <footer class="blockquote-footer">
+                            María Pérez
+                            <div class="rating mt-2">
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star text-warning"></i>
+                            </div>
+                        </footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <blockquote class="blockquote">
+                        <p>"Muy satisfecho con el servicio, repetiré pronto."</p>
+                        <footer class="blockquote-footer">
+                            Juan García
+                            <div class="rating mt-2">
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-fill text-warning"></i>
+                                <i class="bi bi-star-half text-warning"></i>
+                                <i class="bi bi-star text-warning"></i>
+                            </div>
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="beneficios" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Beneficios de Reservar con Nosotros</h2>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <i class="bi bi-headset fs-1 text-primary"></i>
+                    <h5 class="mt-3">Atención Personalizada</h5>
+                    <p>Te ayudamos a planificar cada detalle de tu viaje.</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="bi bi-wallet2 fs-1 text-success"></i>
+                    <h5 class="mt-3">Mejor Precio Garantizado</h5>
+                    <p>Asegúrate de obtener la mejor oferta disponible.</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="bi bi-calendar-check fs-1 text-warning"></i>
+                    <h5 class="mt-3">Fácil Cancelación</h5>
+                    <p>Cancela o modifica tus planes sin preocupaciones.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 Reserva de Viajes. Todos los derechos reservados.</p>
     </footer>
+
 
     <!-- Enlace a Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
