--- a/destinos.html
+++ b/destinos.html
@@ -6,6 +6,7 @@
     <title>Contacto Viajes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
                         <a class="nav-link" href="destinos.html">Destinos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ofertas">Ofertas</a>
+                        <a class="nav-link" href="experiencias.html">Experiencias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -34,3 +35,43 @@
             </div>
         </div>
     </nav>
+
+
+    <section id="destinos" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Explora Nuestros Destinos</h2>
+            <div class="row g-4">
+
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <img src="img/playa.webp" class="card-img-top" alt="Playa">
+                        <div class="card-body">
+                            <h5 class="card-title">Sitios de Playa</h5>
+                            <p class="card-text">Descubre las mejores playas con arenas doradas y aguas cristalinas.</p>
+                            <a href="playa.html" class="btn btn-primary">Explorar</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/montaña.jpg" class="card-img-top" alt="Montaña">
+                    <div class="card-body">
+                        <h5 class="card-title">Sitios de Montaña</h5>
+                        <p class="card-text">Aventúrate en paisajes montañosos y descubre vistas expectaculares.</p>
+                        <a href="montaña.html" class="btn btn-primary">Explorar</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/ciudad.webp" class="card-img-top" alt="Ciudad">
+                    <div class="card-body">
+                        <h5 class="card-title">Sitios de Ciudad</h5>
+                        <p class="card-text">Explora destinos urbanos llenos de vida, cultura y entretenimiento .</p>
+                        <a href="ciudad.html" class="btn btn-primary">Explorar</a>
+                    </div>
+                </div>
+        </div>
+    </section>
