--- a/playa.html
+++ b/playa.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">Blog de Viaje</a>
+                    </li>
                 </ul>
             </div>
         </div>
