--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <body>
+    <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <img src="img/logo2.png" alt="Logo" style="height: 40px; margin-right: 10px;">
@@ -19,63 +19,88 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                    <ul class="navbar__list navbar-nav ms-auto">
+                        <li class="navbar__item nav-item">
                             <a class="nav-link active" href="index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="navbar__item nav-item">
                             <a class="nav-link" href="destinos.html">Destinos</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="navbar__item nav-item">
                             <a class="nav-link" href="experiencias.html">Experiencias</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="navbar__item nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="navbar__item nav-item">
                             <a class="nav-link" href="blog.html">Blog de Viaje</a>
                         </li>
+                        <button id="theme-toggle" class="btn btn-secondary ms-3">Tema Oscuro</button>
                     </ul>
                 </div>
             </div>
         </nav>
+    </header>
 
-        <main class="container my-5">
-            <h1 class="text-center mb-4">Blog de Viajes</h1>
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <div class="card">
-                        <img src="img/blog1.webp" class="card-img-top" alt="Artículo 1">
-                        <div class="card-body">
-                            <h5 class="card-title">5 Consejos para viajar barato</h5>
-                            <p class="card-text">Descubre cómo ahorrar en tus próximas vacaciones con estos consejos prácticos.</p>
-                            <a href="#" class="btn btn-primary">Leer más</a>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="col-12 mb-4">
-                    <div class="card">
-                        <img src="img/blog2.png" class="card-img-top" alt="Artículo 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Los 10 mejores destinos del 2024</h5>
-                            <p class="card-text">Te mostramos los destinos que no puedes perderte este año.</p>
-                            <a href="#" class="btn btn-primary">Leer más</a>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="col-12 mb-4">
-                    <div class="card">
-                        <img src="img/blog3.webp" class="card-img-top" alt="Artículo 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Cómo preparar la maleta perfecta</h5>
-                            <p class="card-text">Ahorra espacio y lleva lo esencial con estos consejos de expertos.</p>
-                            <a href="#" class="btn btn-primary">Leer más</a>
-                        </div>
+    <main class="container my-5">
+        <h1 class="text-center mb-4">Blog de Viajes</h1>
+        <div class="row">
+            <div class="col-12 mb-4">
+                <div class="card">
+                    <img src="img/blog1.webp" class="card-img-top" alt="Artículo 1">
+                    <div class="card__body">
+                        <h5 class="card__title">5 Consejos para viajar barato</h5>
+                        <p class="card__text">Descubre cómo ahorrar en tus próximas vacaciones con estos consejos prácticos.</p>
+                        <a href="#" class="card__link btn btn-primary">Leer más</a>
                     </div>
                 </div>
             </div>
-        </main>
+
+            <div class="col-12 mb-4">
+                <div class="card">
+                    <img src="img/blog2.png" class="card-img-top" alt="Artículo 2">
+                    <div class="card__body">
+                        <h5 class="card__title">Los 10 mejores destinos del 2024</h5>
+                        <p class="card__text">Te mostramos los destinos que no puedes perderte este año.</p>
+                        <a href="#" class="card__link btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 mb-4">
+                <div class="card">
+                    <img src="img/blog3.webp" class="card-img-top" alt="Artículo 3">
+                    <div class="card__body">
+                        <h5 class="card__title">Cómo preparar la maleta perfecta</h5>
+                        <p class="card__text">Ahorra espacio y lleva lo esencial con estos consejos de expertos.</p>
+                        <a href="#" class="card__link btn btn-primary">Leer más</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container text-center py-3">
+            <p>&copy; 2025 Reserva de Viajes. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        const toggleBtn = document.getElementById('theme-toggle');
+        const currentTheme = localStorage.getItem('theme');
+        if (currentTheme === 'dark') {
+            document.body.classList.add('dark-mode');
+            toggleBtn.textContent = 'Tema Claro';
+        }
+        toggleBtn.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            let theme = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
+            localStorage.setItem('theme', theme);
+            toggleBtn.textContent = theme === 'dark' ? 'Tema Claro' : 'Tema Oscuro';
+        });
+    </script>
 </body>
 </html>
