--- a/playa.html
+++ b/playa.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Destinos de Playa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,133 +10,89 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <img src="img/logo2.png" alt="Logo" style="height: 40px; margin-right: 10px;">
+            <img src="img/logo2.png" alt="Logo" style="height:40px;margin-right:10px;">
             <a class="navbar-brand" href="#">Viajes</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="destinos.html">Destinos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="experiencias.html">Experiencias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog de Viaje</a>
-                    </li>
-                </ul>
+            <ul class="navbar__list navbar-nav ms-auto">
+                <li class="navbar__item nav-item">
+                <a class="nav-link active" href="index.html">Inicio</a>
+                </li>
+                <li class="navbar__item nav-item">
+                <a class="nav-link" href="destinos.html">Destinos</a>
+                </li>
+                <li class="navbar__item nav-item">
+                <a class="nav-link" href="experiencias.html">Experiencias</a>
+                </li>
+                <li class="navbar__item nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+                <li class="navbar__item nav-item">
+                <a class="nav-link" href="blog.html">Blog de Viaje</a>
+                </li>
+                <button id="theme-toggle" class="btn btn-secondary ms-3">Tema Oscuro</button>
+            </ul>
             </div>
         </div>
-    </nav>
+        </nav>
+    </header>
 
-    <main> 
+    <main>
         <section class="py-5">
-            <div class="container">
-                <h2 class="text-center mb-4">Destinos de Playa</h2>
-                <div class="row g-4">
-                    
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa1.jpg" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Praia da Falésia, Algarve, Portugal</h5>
-                                <p class="card-text">Se encuentra en uno de nuestros destinos preferidos de Portugal: el Algarve.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa2.jpg" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Spiaggia dei Conigli, Sicilia, Italia</h5>
-                                <p class="card-text">Es una de las playas más bonitas de Italia ¡y del mundo!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa3.avif" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Playa de La Concha, San Sebastián, España</h5>
-                                <p class="card-text">Una bahía en forma de concha rodeada de colinas y edificios históricos.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa4.jpg" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Ka'anapali Beach, Maui, Hawaii</h5>
-                                <p class="card-text">Una de las playas más populares y hermosas de Maui, la segunda isla más grande de Hawái.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa5.avif" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Grace Bay Beach, Turcas y Caicos, Caribe</h5>
-                                <p class="card-text">Aguas azules y cristalinas y un tranquilo oleaje gracias a la barrera de coral, perfecta para buceo y el esnórquel.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa6.jpg" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Anse Lazio, Seychelles</h5>
-                                <p class="card-text">Un paraíso tropical con aguas turquesas y arena blanca.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa7.webp" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Manly Beach Sidney, Australia</h5>
-                                <p class="card-text">Las olas de Manly Beach, en el norte de Sídney, atraen a surfistas de todo el mundo.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa8.webp" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Playa Balandra La Paz, Mexico</h5>
-                                <p class="card-text">Acantilados volcánicos, manglares y una peculiar roca con forma de seta.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="img/playa9.jpg" class="card-img-top" alt="Playa 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Reynisfjara, Vik, Islandia</h5>
-                                <p class="card-text">Reynisfjara es una impresionante playa de arena negra volcánica ubicada en la costa sur de Islandia.</p>
-                            </div>
-                        </div>
-                    </div>
+        <div class="container">
+            <h2 class="text-center mb-4">Destinos de Playa</h2>
+            <div class="destinos-grid">
+            <div class="card">
+                <img src="img/playa1.jpg" class="card-img-top" alt="Playa 1">
+                <div class="card_body">
+                <h5 class="card_title">Praia da Falésia, Portugal</h5>
+                <p class="card_text">Ubicada en el Algarve.</p>
                 </div>
             </div>
+            <div class="card">
+                <img src="img/playa2.jpg" class="card-img-top" alt="Playa 2">
+                <div class="card_body">
+                <h5 class="card_title">Spiaggia dei Conigli, Italia</h5>
+                <p class="card_text">Una de las playas más bonitas de Italia.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/playa3.avif" class="card-img-top" alt="Playa 3">
+                <div class="card_body">
+                <h5 class="card_title">Playa de La Concha, España</h5>
+                <p class="card_text">Una bahía en forma de concha rodeada de colinas.</p>
+                </div>
+            </div>
+            </div>
+        </div>
         </section>
     </main>
+    
+    <footer>
+        <div class="container text-center py-3">
+        <p>&copy; 2024 Reserva de Viajes. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        const toggleBtn = document.getElementById('theme-toggle');
+        const currentTheme = localStorage.getItem('theme');
+        if (currentTheme === 'dark') {
+            document.body.classList.add('dark-mode');
+            toggleBtn.textContent = 'Tema Claro';
+        }
+        toggleBtn.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            let theme = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
+            localStorage.setItem('theme', theme);
+            toggleBtn.textContent = theme === 'dark' ? 'Tema Claro' : 'Tema Oscuro';
+        });
+    </script>
 </body>
 </html>
